Expand ViperServer with machine control API and WebSocket events
Adds live state and control on top of the inventory endpoint: GET /api/machine/status (enabled, homed, busy, position), GET /api/ports, POST /api/machine/connect|disconnect|home, and POST /api/jog (mm deltas). Motion actions run on OpenPnP's machine task executor via Machine.submit; connect/disconnect call setEnabled directly. A MachineListener pushes a status snapshot to WebSocket clients on /ws/events whenever the machine is enabled/disabled/homed/busy or a head moves. Verified end-to-end against NullDriver.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>